overflow fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@
 }
 /* ---------- Constant ---------- */
 * {
-   max-width: 100vw;
+   max-width: 100%;
 }
 body {
    overflow-x: hidden;
